[package]
name = "channel-test"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-amqp = "0.1.3"
lapin = "1.2.1"
lazy_static = "1.4.0"
futures = "0.3"
futures-util = "0.3.5"

[profile.dev]
debug = false # Reduce disk usage, but also lose the ability to debug :p

[profile.test]
debug = false
